html/css/skooply.css
/* ... */
a#user-settings:hover div {
    top: 107px;
    display: block;
    width: 300px;
    height: 64px;
    background: #ec3069;
    position: fixed;
    z-index: 999;
    right: 55px;
    color: white;
    text-align: left;
    text-decoration: none;
    font-weight: bold;
    font-size: 18px;
    overflow: hidden;
    line-height: 22px;
    padding-left: 10px;
    padding-top: 8px;
    border-radius: 5px 0 0 5px; 
}

a#user-settings:hover div span {
    visibility: visible;
}

a#user-settings:hover div span img {
    margin-right: 8px;
    float: left;
}

.taskbar-text-smaller {
    font-size: 12px;
    float: left;
    font-weight: normal;
}

a#user-settings div {
    /* background: url(../img/icon-profile-mini.png) no-repeat 3px 5px;  */
    background: url(http://profile.ak.fbcdn.net/hprofile-ak-snc4/41464_601694530_3816_q.jpg) no-repeat 3px 5px;  
}

a#log-out:hover div:after {
    content: "Log out";
    top: 192px;
}

a#log-out div {
    background: url(../img/icon-taskbar-lock-locked.png) no-repeat 3px 5px;
}

a#add-skoop:hover div:after {
    content: "Add a skoop";
    top: 240px;
}

a#add-skoop div {
    background: url(../img/icon-taskbar-add-skoop.png) no-repeat 3px 5px;
}

a#watched-skoops:hover div:after {
    content: "Skoops I am watching";
    top: 288px;
}

a#watched-skoops div {
    background: url(../img/icon-taskbar-watched-skoop.png) no-repeat 3px 7px;
}

a#my-skoops:hover div:after {
    content: "My skoops";
    top: 336px;
}

a#my-skoops div {
    background: url(../img/icon-taskbar-my-skoops.png) no-repeat 3px 7px;
}

#main-logo-container{
  width:200px;
  margin-left:50px;
}

#main-logo {
    display: block;
    height: 85px;
    width: 200px;
    top:9px;
    right: 2px;
    position: absolute;
    background: url(../img/skooply-logo.png) no-repeat;
}

#main-logo a:hover {
    top: 11px;
    cursor: pointer;
    z-index: 1000;
}


#main-logo p {
    visibility: hidden;
}

header {
/*
    display: block;
    position: absolute;
    height: 90px;
    width: 100%;
    top:0;
    left: 0;
    text-align:center;
 */
   /*border:dashed 1px black;*/
   margin:0px;
   width: 100%;
   text-align:center;
}

/* 2012-04-04 this is the Facebook div */
#account-info{
   
   /* This is what I'd like to do but the menu min-width is screwing that.
    * I'll have to kludge an absolute position for now.
   float:left;
   margin:0px 0px 0px 0px;
   height:50px;
   width:250px;
  */
  
   /*border:solid 1px #E0E0D5;*/
   visibility:hidden;
   height:50px;
   width:250px;
   top:15px;
   right: 225px;
   position: absolute;
}

#fb-root{
}


#main {
/*
 * why is this pushed so far down?
    margin-right: 55px;
    margin-top: 91px;
    border-top: dotted #CBCBC1 1px;
*/
    margin-right: 55px;
    margin-top: 20px;
    margin-left: 10px;
    border: dotted #CBCBC1 1px;
}

footer {

}


/* skoop formatting */
.slides_container {
    width: 490px;
    height: 430px;
    display: block;
    border: solid 5px #EDEDE6;
    margin-left: auto;
    margin-right: auto;
    /*box-shadow: 0px 0px 10px rgba(0,0,0,0.25);*/
    background: #ccccc1;
    overflow: hidden;
 
}

/*
	Each slide
	Important:
	Set the width of your slides
	If height not specified height will be set by the slide content
	Set to display block
*/
.slides_container div {
    display: block;
    width: 490px;
    height: 430px;
    padding: 0;
    margin: 0;
    background: white;
}

.pagination .current a {
	color:white;
	background: #FF1F68;
}

.pagination {
    width: 250px;
    display: block;
    margin: 0 auto;
    padding: 0;
    margin-top: 5px;
    text-align: center;
    height: 25px;
 }


.pagination li {
    font-weight: bold;
	list-style:none;
    display: inline;
}

.pagination li a {
    text-decoration: none;
    text-align: center;
    padding: 10px;
    background-color: #ffffff;
    color: #666661;
}

.centered {
    margin: 0 auto;
}

#featured-skoops {
    width: 470px;
    height: 230px;
    display: block;
    border: solid 5px #EDEDE6;
    margin: 10px 0 10px 0; 
    margin-left: auto;
    margin-right: auto;
    /*box-shadow: 0px 0px 10px rgba(0,0,0,0.25);*/
    background: #ccccc1;
    overflow: hidden; 
}

#featured-skoops>div {
    display: block;
    width: 480px;
    height: 230px;
    padding: 0;
    margin: 0;
    background: aqua;
}

#skoop-grid-container {
    clear: both;
}

.skoop-container {
    display: block;
    margin: 10px;
    overflow: show;
}


.skoop {
    display: block;
    border: solid 5px #EDEDE6;
    overflow: hidden;
    margin: 0 auto;
    width: 230px; 
   
    /*box-shadow: 1px 1px 5px rgba(0,0,0,0.25)*/
}

.skoop>img {
    max-width: 230px;
    border-bottom: solid 5px #EDEDE6;
}


div.skoop-controller {
    display: none;
    border: dotted 1px #ED3169;
    width: 238px;
    min-height: 240px;
    background: rgba(255,255,255,0.9);
    position: absolute;
    z-index: 10000;
    top: 0;
    left: 0;
    padding: 0 0 0 0 ;
    border-radius: 5px;
}

.skoop-controller>button {
    text-align: center;
    color: white;
    background: #60615B;
    border: none;
    border-collapse: collapse;
    padding: 4px;
    margin: 10px auto 10px auto;
    display: block;
    width: 150px;
    border-radius: 5px;
}

.skoop-controller>button:first-child {
    margin-top: 45px;
}

.skoop-controller>button:hover {
    background: #ED3169;
}

.skoop-details {
    color: #666661;
    display: block;
    padding: 5px 0;
}

.skoop-status-container {
    display: block;
    right: -195px;
    position: relative;
    width: 35px;
    height: 35px;
    bottom: 39px;
    margin-bottom: -40px;
}

div.skoop-status-container:hover:before {
    font-size: 14px;
    font-weight: bold;
    color: white;
    padding: 10px 4px 4px 4px;
    display: block;
    width: 222px;
    height: 55px;
    left: -195px;
    top: -34px;
    position: absolute;
}

.skoop-status-container.approved {
        background: transparent url(../img/approved-skoop.png) right bottom no-repeat;
}
/* ... */

